--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         <div class="bg-image" style="display:grid; justify-content:center">
              <canvas id="c"></canvas>
              <div class="message">
-                 <audio controls autoplay loop id="player">
-                    <source src="birthday.mp3" type="audio/mpeg">
+                <audio controls autoplay loop id="player">
+                    <source src="glory-to-God-in-the-Highest.mp3" type="audio/mpeg">
                   Your browser does not support the audio element.
-                  </audio>
+                </audio>
                  Wanna drop some birthday gift for your boy?. Kindly send momo via 0248921190
             </div>
         </div>
