--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
                 <audio controls autoplay loop id="player">
                     <source src="glory-to-God-in-the-Highest.mp3" type="audio/mpeg">
                   Your browser does not support the audio element.
-                </audio>
-                 Wanna drop some birthday gift for your boy?. Kindly send momo via 0248921190
+                </audio><br />
+                Glory to God in the Highest for addidng another year to my age<br />
+                 Wanna drop some birthday gift for your boy?.<br />
+                Kindly send momo via <span style="color:purple; font-size: 1.05rem;">0248921190</span><br />
             </div>
         </div>
     </div>
