--- a/index.html
+++ b/index.html
@@ -13,12 +13,11 @@
 </head>
 <body>
     <div class="header">
-        <h3 class="hurray">Hurray is My &nbsp;</h3>
-        <h3 class="today">Birthday</h3>
-        <img src="nuru.webp" alt="" class="header-img">
+        <h3 class="hurray">Hurray🍾 is My &nbsp;</h3>
+        <h3 class="today">Birthday🎂🎂</h3>
     </div>
     <canvas id="screen"></canvas>
-    <div class="" style="width:100%; display:flex; justify-content:center">
+    <div class="" style="width:100%; display:flex; justify-content:center;">
         <div class="bg-image" style="display:grid; justify-content:center">
              <canvas id="c"></canvas>
              <div class="message">
@@ -27,7 +26,7 @@
                   Your browser does not support the audio element.
                 </audio><br />
                 Glory to God in the Highest for addidng another year to my age<br />
-                 Wanna drop some birthday gift for your boy?.<br />
+                 Wanna drop some birthday gift for your boy?.😁<br />
                 Kindly send momo via <span style="color:purple; font-size: 1.05rem;">0248921190</span><br />
             </div>
         </div>
