--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,27 +12,30 @@
     <link rel="shortcut icon" href="nuru.ico" type="image/x-icon" />
 
 </head>
-<body>
-    <div class="header">
-        <h3 class="hurray">Hurray🍾 is My &nbsp;</h3>
-        <h3 class="today">Birthday🎂🎂</h3>
-    </div>
-    <canvas id="screen"></canvas>
-    <div class="" style="width:100%; display:flex; justify-content:center;">
-        <div class="bg-image" style="display:grid; justify-content:center">
-             <canvas id="c"></canvas>
-             <div class="message">
-                <audio controls autoplay loop id="player">
-                    <source src="glory-to-God-in-the-Highest.mp3" type="audio/mpeg">
-                  Your browser does not support the audio element.
-                </audio><br />
-                Glory to God in the Highest for addidng another year to my age<br />
-                 Wanna drop some birthday gift for your boy?.😁<br />
-                Kindly send momo via <span style="color:purple; font-size: 1.05rem;">0248921190</span><br />
+
+<body style="display:flex; justify-content: center">
+    <div>
+        <div class="header">
+            <h3 class="hurray">Hurray🍾 is My &nbsp;</h3>
+            <h3 class="today">Birthday🎂🎂</h3>
+        </div>
+        <canvas id="screen"></canvas>
+        <div class="" style="width:100%; display:flex; justify-content:center;">
+            <div class="bg-image" style="display:grid; justify-content:center">
+                <canvas id="c"></canvas>
+                <div class="message">
+                    <audio controls autoplay loop id="player">
+                        <source src="glory-to-God-in-the-Highest.mp3" type="audio/mpeg">
+                        Your browser does not support the audio element.
+                    </audio><br />
+                    Glory to God in the Highest for addidng another year to my age<br />
+                    Wanna drop some birthday gift for your boy?.😁<br />
+                    Kindly send momo via <span style="color:purple; font-size: 1.05rem;">0248921190</span><br />
+                </div>
             </div>
         </div>
     </div>
-    
+
     <script src="pen2.js"></script>
     <script src="pen1.js"></script>
     <script>
@@ -42,4 +46,5 @@
         }
     </script>
 </body>
+
 </html>
