--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 </head>
 
-<body style="display:flex; justify-content: center">
+<body style="display:flex; justify-content: center; place-items: center;">
     <div>
         <div class="header">
             <h3 class="hurray">Hurray🍾 is My &nbsp;</h3>
